# showrunner

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  serve_orchestrator.py
.claude/: settings.json
.claude/hooks/: block_secrets.py  check_on_save.py
agentcore/: .gitignore  agentcore.json  agentcore.template.json  local-config.example.json
agentcore/cdk/: package-lock.json
agents/: __init__.py  mcp_env.py
agents/langgraph/: __init__.py  agent.py  prompts.py
agents/orchestrator/: agent.py  memory_config.py  prompts.py
agents/strands/: __init__.py  agent.py  memory_config.py  prompts.py
evals/: cases.yaml  run_evals.py
gateway/: README.md
identity/: README.md
mcp_servers/: __init__.py  runtime.py  serve_places.py  serve_tvmaze.py
mcp_servers/places/: SKILL.md  __init__.py  cache.py  nominatim_client.py  osrm_client.py  overpass_client.py  server.py
mcp_servers/tvmaze/: SKILL.md  __init__.py  server.py  tvmaze_client.py
policies/: README.md  argument_bounds.cedar  showrunner_tools.cedar
policies/tools/: places_geocode.cedar  (+6 more)
scripts/: config.py  create_cognito.sh  create_cognito_m2m.sh  harden_cognito.sh  rotate_cognito_secrets.sh  smoke_places.py  smoke_tvmaze.py  wire_gateway_targets.sh
tests/: conftest.py  test_config_template.py  test_gateway_mode.py  test_langgraph_agent.py  test_orchestrator.py  test_orchestrator_memory.py  test_places_clients.py  test_places_server.py  test_scaffold.py  test_strands_agent.py  test_strands_memory.py  test_transport.py  test_tvmaze_client.py  test_tvmaze_server.py
(+1 files in other folders)
