[project]
name = "showrunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-opentelemetry-distro>=0.18.0",
    "bedrock-agentcore>=1.18.1",
    "httpx>=0.28.1",
    "langchain-aws>=1.6.2",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "mcp[cli]>=1.28.1",
    "strands-agents>=1.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: test performs a live network call (e.g. the TVmaze API)",
    "integration: test spawns the MCP servers as subprocesses over stdio",
]
